@@ -43,7 +43,7 @@ public class YoutubeServiceImpl implements YoutubeService {
 
     private UserToken getUserToken(String youtubeUserId) {
 
-        if(youtubeUserId == null) {
+        if (youtubeUserId == null) {
             return null;
         }
         Optional<UserToken> optionalUserToken = userTokenRepository.findByYoutubeUserId(youtubeUserId);
@@ -70,7 +70,7 @@ public class YoutubeServiceImpl implements YoutubeService {
         ResponseEntity<YoutubeResponseDto> response = getPlaylistRestCall(url, userToken, youtubeUserId);
 
         if (response.getStatusCode().is2xxSuccessful()) {
-            return Objects.requireNonNull(response.getBody()).youtubeItemsDtos().getFirst();
+            return Objects.requireNonNull(response.getBody()).youtubeItemsDtos().get(0);
         }
         return null;
     }
@@ -96,7 +96,7 @@ public class YoutubeServiceImpl implements YoutubeService {
         ResponseEntity<YoutubeResponseDto> response = getPlaylistRestCall(url, userToken, youtubeUserId);
 
         if (response.getStatusCode().is2xxSuccessful()) {
-            return Objects.requireNonNull(response.getBody()).youtubeItemsDtos().getFirst();
+            return Objects.requireNonNull(response.getBody()).youtubeItemsDtos().get(0);
         }
         return null;
     }
